deploy/k8s/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: iconrepo-nodejs
  labels:
    app: iconrepo-nodejs
spec:
  selector:
    app: iconrepo-nodejs
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: iconrepo-nodejs
  name: iconrepo-nodejs
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: iconrepo-nodejs
  template:
    metadata:
      labels:
        app: iconrepo-nodejs
    spec:
      containers:
      - image: iconrepo-nodejs:latest
        imagePullPolicy: Never
        name: iconrepo-nodejs
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /app-info
            port: 8080
        resources:
          requests:
            memory: "1024Mi"
            cpu: "500m"
          limits:
            memory: "2048Mi"
            cpu: "500m"
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - name: iconrepo-nodejs
          mountPath: /data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: secrets-volume
        - name: iconrepo-nodejs
          persistentVolumeClaim:
            claimName: iconrepo-nodejs-pv-claim
