deploy/k8s/contour-httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: iconrepo-nodejs-ingress
  namespace: default
spec:
  virtualhost:
    fqdn: iconrepo-nodejs.local.com
  routes:
    - conditions:
        - prefix: /oauth2/authorization/keycloak
      services:
        - name: iconrepo-nodejs
          port: 8080
      pathRewritePolicy:
        replacePrefix:
          - prefix: /api
            replacement: /
      cookieRewritePolicies: # We're not directing to REWRITE here actually, we're directing NOT to REWRITE
        - name: JSESSIONID
          pathRewrite:
            value: /
    - conditions:
        - prefix: /login
      services:
        - name: iconrepo-nodejs
          port: 8080
      pathRewritePolicy:
        replacePrefix:
          - prefix: /api
            replacement: /
      cookieRewritePolicies: # We're not directing to REWRITE here actually, we're directing NOT to REWRITE
        - name: JSESSIONID
          pathRewrite:
            value: /
    - conditions:
        - prefix: /api
      services:
        - name: iconrepo-nodejs
          port: 8080
      pathRewritePolicy:
        replacePrefix:
          - prefix: /api
            replacement: /
      cookieRewritePolicies: # We're not directing to REWRITE here actually, we're directing NOT to REWRITE
        - name: mysession
          pathRewrite:
            value: /
    - conditions:
        - prefix: /oidc-callback
      services:
        - name: iconrepo-nodejs
          port: 8080
    - conditions:
        - prefix: /
      services:
        - name: iconrepo
          port: 8080
